ER-1361: Consolidate styling on h2. Add line height to avoid clipping of text

--- a/sites/all/themes/orwell/assets/sass/component/_ting-object-compact.scss
+++ b/sites/all/themes/orwell/assets/sass/component/_ting-object-compact.scss
@@ -2,13 +2,13 @@
 
 .ting-object.view-mode-compact {
   // See also grid view in _search.scss.
-  .field-name-ting-title {
-    font-family: $font-regular;
-    color: $color__font-gray--dark;
-    font-size: 16px;
-    letter-spacing: 0.5px;
-    margin-top: 6px;
-    h2 {
+  .field-name-ting-title h2 {
+      font-family: $font-regular;
+      color: $color__font-gray--dark;
+      font-size: 16px;
+      line-height: 1.1;
+      letter-spacing: 0.5px;
+      margin-top: 6px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -17,7 +17,6 @@
       @include grid-media($medium) {
         max-width: 180px;
       }
-    }
   }
 
   // Always hide rating widget.
